2007-07-27  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/models/dona_daa.rb (DonaDaa): New file. (port from article.rb)
	* donrails/app/models/dona_ca.rb (DonaCa): New file. (port from article.rb)
	* donrails/app/models/article.rb: change for this.

	* donrails/app/controllers/application.rb (ApplicationController::authorize): Fix to show old notice message.

	* donrails/app/models/article.rb (DonaDaa): Add validates_uniqueness_of to prepend duplicate entry. And cleanup.

	* donrails/test/integration/browse_story_test.rb (BrowseStoryTest::test_fromtop): Small fix.

	* donrails/app/models/article_sweeper.rb (ArticleSweeper::ep_notes): Fix for cleaning wrong path.

	* donrails/app/controllers/notes_controller.rb (NotesController::recent_trigger_title_a): Fix error for no articles.

	* donrails/app/models/article_sweeper.rb (ArticleSweeper::ep_atom): Fix for cleaning wrong path.
	(ArticleSweeper::ep_trigger_title_a): likewise.
	* donrails/test/integration/cache_test.rb (CacheTest::test_caching_notes): Add test for it.

2007-07-26  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/helpers/application_helper.rb (ApplicationHelper::display_article_categories): Fix: link url.

	* donrails/app/models/article.rb (DonaCa): Fix: dupluicate category and article association. (issue #58)

2007-07-25  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/tool/pingger/pingger.rb (Pingger::async_send): Fix to use with both PostgreSQL and MySQL. (issue #60)

	* donrails/app/helpers/application_helper.rb (ApplicationHelper::display_categories_roots_ul): remove entry number of article in category. 

	* donrails/app/controllers/application.rb (ApplicationController): Prevent passord to write in log.(issue #59)

2007-07-17  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/controllers/admin/article_controller.rb (Admin::form_article): Small fix. (issue #57)

	* donrails/app/apis/meta_weblog_service.rb (MetaWeblogService::editPost): Fix to apply has_many :through.